# spl-token-faucet

./: .babelrc  .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  program-id.md  url.js
src/client/: deploy.js  hello_world.js  main.js  test.js  url.js
src/client/util/: account.js  layout.js  new-account-with-lamports.js  new-system-account-with-airdrop.js  send-and-confirm-transaction.js  sleep.js  store.js
src/program/: Cargo.toml
src/program-rust/: Cargo.toml  do.sh
src/program-rust/src/: lib.rs
src/program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/program/tests/: functional.rs
store/: deploy.json
