
# Note: This crate must be built using do.sh

[package]
name = "solana-escrow"
version = "0.0.1"
description = "Solana escrow"
authors = ["Paul"]
repository = "https://github.com/paul-schaaf/solana-escrow"
license = "MIT"
homepage = "https://github.com/paul-schaaf/solana-escrow"
edition = "2018"

[features]
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dependencies]
byteorder = "1.3"
solana-sdk = { version = "=1.3.17", default-features = false, optional = true }

[lib]
name = "solana_escrow"
crate-type = ["cdylib", "lib"]
